<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".AboutPage">



    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:rotation="180">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:rotationY="180"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/wave" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:gravity="start"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/buku1" />

            <LinearLayout
                android:gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginRight="10dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/logoarabputih" />

                <TextView
                    android:textColor="@color/white"
                    android:fontFamily="@font/insanibuu"
                    android:textSize="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="APLIKASI PENGENALAN KAIDAH DALAM BAHASA ARAB" />

            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/fkom"
                android:background="@drawable/btn_primary"
                android:padding="10dp" />


        </LinearLayout>
    </RelativeLayout>


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:orientation="vertical">


        <TextView
            android:layout_marginTop="20dp"
            android:textSize="25dp"
            android:textColor="@color/black"
            android:gravity="center"
            android:lineHeight="30dp"
            android:fontFamily="@font/insanibuu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TENTANG APLIKASI" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:background="@color/grey"
            android:minHeight="350dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/JudulApp"
                android:textSize="14dp"
                android:textColor="@color/black" />

            <ImageView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/gugun"
                android:layout_gravity="center" />

            <TextView
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pencipta"
                android:textSize="16dp"
                android:fontFamily="@font/insanibuu"
                android:textColor="@color/black" />

            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prodi"
                android:textSize="14dp"
                android:textColor="@color/black" />
            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fakultas"
                android:textSize="14dp"
                android:textColor="@color/black" />
            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/universitas"
                android:textSize="14dp"
                android:textColor="@color/black" />


        </LinearLayout>

        <Button
            android:layout_marginBottom="10dp"
            android:theme="@style/myButton"
            android:id="@+id/btnAboutKembali"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:background="@drawable/btn_primary"
            android:textColor="@color/black"
            android:fontFamily="@font/insanibuu"
            android:text="KEMBALI" />





    </LinearLayout>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:rotationY="180"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/wave" />



    </LinearLayout>



</RelativeLayout>